test/test_suite/errors/error_decl_fails.c3
module foo;

error TooBig // #error: Error type may not exceed pointer
{
    usize a;
    char b;
}


